# dotfiles

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.alpine  Dockerfile.arch  Makefile  README.md  bootstrap.pl  bootstrap.sh  colors.sh  config.json  install  install.pl  install.sh  setup.pl  setup.sh  test.sh  utils.sh
.github/: dependabot.yml
bash/: .bash_profile  .bashrc  .profile
files/: .bash_profile  .bashrc  .profile
fish/: config.fish  fishfile
git/: .gitconfig
home/: .aliases  .bash_profile  .bashrc  .gitconfig  .gitconfig.bigrepo  .gitconfig.local  .gitconfig.work  .p10k.zsh  .profile  .tmux.conf  .vimrc  .zshrc
install/: 00-apt-pkglist  00-apt-pkglist.save  00-apt.sh  00-setup.sh  01-apt.sh  01-bash.sh  01-fish.sh  02-fish.sh  02-ssh.sh  03-ssh.sh  04-git.sh  05-vim.sh  10-git.sh  10-pyenv-pkglist  10-pyenv.sh  11-docker.sh  11-keybase.sh  (+25 more)
install-scripts/: setup.sh
install.d/: 00-os.sh  10-brew.sh  11-apt.sh  12-pacman.sh  13-apk.sh  14-macos-cli.sh  20-ssh.sh  21-git.sh  22-zsh.sh  23-stow.sh  24-tmux.sh  25-vim.sh  26-bat.sh  26-preview.sh  27-preview.sh  30-mise.sh  31-gh.sh  33-csearch.sh  35-mlx.sh  36-mlx-models.sh  41-docker.sh  42-azure.sh  43-devcontainer.sh  50-redis.sh  61-nerdfont.sh  62-ghostty.sh  63-google-chrome.sh  64-zed.sh  65-mcp.sh  70-cca.sh  71-rectangle.sh  72-betterdisplay.sh  72-meetingbar.sh  73-betterdisplay.sh  73-dockutil.sh  73-keycastr.sh  74-dockutil.sh  74-vscode.sh  75-cmatrix.sh  75-wispr-flow.sh  (+5 more)
tests/: .gitignore  Makefile  pyproject.toml  run.sh  test_binaries.py  test_system_config.py
(+225 files in other folders)
