[tool.poetry]
authors = ["andrejus <hi@andrejus.uk>"]
description = "Verifies dotfiles install"
name = "dotfiles-test"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
black = "^24.3"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
