[project]
name = "dotfiles-test"
version = "0.0.1"
description = "Verifies dotfiles install"
authors = [{ name = "andrejus", email = "hi@andrejus.uk" }]
requires-python = ">=3.9"
dependencies = ["pytest>=8.0.0"]

[dependency-groups]
dev = ["black>=24.3"]

[tool.uv]
# Not an installable package (mirrors poetry's package-mode = false): uv only
# provisions the dependency venv, it doesn't build/install this project.
package = false
